# CMakeTemplate

./: CMakeLists.txt  README.md  build_Debug.sh  compiler_options.cmake  configure.sh  run_tests.sh
core/src/: CMakeLists.txt  token.hh  tokenizer.cc  tokenizer.hh
core/tests/: CMakeLists.txt  dummy_test.cc  tokenizer_test.cc
